src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Primary_NCM_Travel_Wait_Hours__c</fullName>
        <label>Primary CM Travel/Wait Units</label>
        <summarizedField>Case_Note_Entry__c.Travel_Wait_Hours_Nurse__c</summarizedField>
        <summaryFilterItems>
            <field>Case_Note_Entry__c.Primary_Nurse__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Case_Note_Entry__c.Report__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Primary_Treating_State__c</fullName>
        <label>Primary Treating State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Priority</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Process_A__c</fullName>
        <inlineHelpText>1 - Ready to Sync
2 - Sync Error
3 - Synced</inlineHelpText>
        <label>Process A</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Process_B__c</fullName>
        <inlineHelpText>1 - Ready to Sync 
2 - Sync Error 
3 - Synced</inlineHelpText>
        <label>Process B</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProfHoursPrimaryCMCredit__c</fullName>
        <label>Primary CM Prof. Units Approved</label>
        <summarizedField>Case_Note_Entry__c.Professional_Hours__c</summarizedField>
        <summaryFilterItems>
            <field>Case_Note_Entry__c.Primary_Nurse__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Case_Note_Entry__c.Report__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Professional_Rate__c</fullName>
        <label>Professional Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project_Details__c</fullName>
        <label>Project Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ProjectedClosureDate__c</fullName>
        <inlineHelpText>NCM estimate closure date</inlineHelpText>
        <label>Projected Closure Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QA_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>QA Approved</description>
        <label>QA Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QA_Rating_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box before approving when Report Review/Rating has been completed.</inlineHelpText>
        <label>QA - Rating Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QAby__c</fullName>
        <description>This field is for Quality Assurance staff that work from home part-time.</description>
        <inlineHelpText>Select the QA person that proofed this report. Note this field is specific to the Staff that works from Home.</inlineHelpText>
        <label>QA by:</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Allaire Jutting</fullName>
                </value>
                <value>
                    <fullName>Eileen Jutting</fullName>
                </value>
                <value>
                    <fullName>Amanda Campos</fullName>
                </value>
                <value>
                    <fullName>Devon Asmus</fullName>
                </value>
                <value>
                    <fullName>Shelagh  Ghering</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QBJurisdiction__c</fullName>
        <description>This field is being used in code and in the QB synch.  Please do not modify and/or delete.</description>
        <label>Jurisdiction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QBServiceItem__c</fullName>
        <label>QB Service Item</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QB_Service_Item__c</fullName>
        <formula>Text(Related_Case__r.QB_Service_Item__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QB Service Item</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RTW_Motivation_Comment__c</fullName>
        <description>Return to work motivation comment</description>
        <inlineHelpText>If needed, explain reason for selection regarding motivation for return to work</inlineHelpText>
        <label>RTW Motivation Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rate_State__c</fullName>
        <label>Rate (State)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_Won_Lost__c</fullName>
        <label>Reason Won / Lost</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Product Issues</fullName>
                </value>
                <value>
                    <fullName>Relationship</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_for_Closure__c</fullName>
        <description>Reason for Closure</description>
        <label>Reasons for Closure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Employee has returned to Usual and Customary work</fullName>
                </value>
                <value>
                    <fullName>Employee has returned to permanent and modified work</fullName>
                </value>
                <value>
                    <fullName>Employee has returned to alternative work</fullName>
                </value>
                <value>
                    <fullName>Employee has reached Permanent and Stationary</fullName>
                </value>
                <value>
                    <fullName>Successful completion of assignment</fullName>
                </value>
                <value>
                    <fullName>Lack of cooperation from employee</fullName>
                </value>
                <value>
                    <fullName>Lack of cooperation from attorney</fullName>
                </value>
                <value>
                    <fullName>Claim denied</fullName>
                </value>
                <value>
                    <fullName>Per claims representative&apos;s request</fullName>
                </value>
                <value>
                    <fullName>Interruption of services</fullName>
                </value>
                <value>
                    <fullName>Medical or Vocational non-feasibility</fullName>
                </value>
                <value>
                    <fullName>Employee is deceased</fullName>
                </value>
                <value>
                    <fullName>EE has returned to U&amp;C work</fullName>
                </value>
                <value>
                    <fullName>EE has returned to perm/modified work</fullName>
                </value>
                <value>
                    <fullName>EE has returned to alternative work</fullName>
                </value>
                <value>
                    <fullName>EE has reached P&amp;S status</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Referral_Date__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referral Date</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Opportunities (Referral Date)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Refunded_Charge_Count__c</fullName>
        <label>Refunded Charge Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Refunded_Charges__c</fullName>
        <label>Refunded Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Regarding_DME_or_other_Ancillary_Service__c</fullName>
        <description>Regarding DME/Home Health</description>
        <inlineHelpText>Indicate type of equipment or Home Health services (frequency and duration) being requested or Home Health services are prescribed indicate &quot;Not Applicable&quot;</inlineHelpText>
        <label>Regarding DME/Home Health</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Regarding_Evidence_Based_Information__c</fullName>
        <description>Regarding Evidence Based Information</description>
        <inlineHelpText>Indicate evidence based criteria such as ACOEM and/or MTUS or credible medical research</inlineHelpText>
        <label>Regarding Evidence Based Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Regarding_Medications__c</fullName>
        <inlineHelpText>Dosage &amp; frequency of current medications prescribed or refilled for this industrial injury. 
For Standard Uniform provide names of all current meds w/dosage &amp; frequency. Include meds for non-industrial conditions that impact recovery &amp; file progression.</inlineHelpText>
        <label>Regarding Medications</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Regarding_Other__c</fullName>
        <label>Regarding Other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Regarding_Physical_Therapy__c</fullName>
        <description>Regarding Therapy(s)</description>
        <inlineHelpText>Indicate frequency and duration of new therapy(s); traditional, alternative, chiropractic, request or whether continuation of previously authorized therapy is recommended.   If no therapy is prescribed, indicate &quot;Not Applicable&quot;</inlineHelpText>
        <label>Regarding Therapy(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Regarding_Procedure_Authorization__c</fullName>
        <description>Procedures/Diagnostic Studies Authorizations</description>
        <inlineHelpText>Indicate non-surgical procedures (epidural injections, discogram) and diagnostic studies (x-ray, MRI, CT scan, ) that are requested or pending.  If none, indicate &quot;Not Applicable&quot;</inlineHelpText>
        <label>Procedures/Diagnostic Studies Auths</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Regarding_Surgery_Authorizations__c</fullName>
        <description>Regarding Surgery Authorizations</description>
        <inlineHelpText>Indicate type of surgery being requested or pending.  If none write &quot;Not Applicable&quot;</inlineHelpText>
        <label>Regarding Surgery Authorizations</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Relased_to_Modified_Duty_on__c</fullName>
        <description>Date Employee was released to modified duty</description>
        <inlineHelpText>Date Employee was released to modified duty</inlineHelpText>
        <label>Released to Modified Duty on</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RelatedCaseNoLeadingZero__c</fullName>
        <formula>TEXT(VALUE(Related_Case__r.CaseNumber))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RelatedCaseNoLeadingZero</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Reports</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Release_to_full_duty_explanation__c</fullName>
        <label>Release to full duty explanation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Release_to_mod_duty_explanation__c</fullName>
        <label>Release to mod duty explanation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Released_to_Full_Duty_on__c</fullName>
        <description>Date employee was released to full duty</description>
        <inlineHelpText>Select date physician released to full duty.</inlineHelpText>
        <label>Released to Full Duty on</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Remain_U_C__c</fullName>
        <description>Remain U&amp;C</description>
        <inlineHelpText>Select With Modifications or Without Modifications, No or Not Applicable; this should reflect what the physician prescribed for work status.  If &quot;Not applicable&quot; is selected, please explain in the comment section.</inlineHelpText>
        <label>Remain U&amp;C</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>With Modifications</fullName>
                </value>
                <value>
                    <fullName>Without Modifications</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Not applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReportMailed__c</fullName>
        <description>Select date report was sent to Customer.</description>
        <inlineHelpText>Select date report was sent to Customer.</inlineHelpText>
        <label>Report Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ReportSubmissionDateTime__c</fullName>
        <label>Report Submission Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ReportType__c</fullName>
        <description>Internal use - for Standard Uniform and Ancillary record type</description>
        <inlineHelpText>Internal Use - Select report type</inlineHelpText>
        <label>Report Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Initial</fullName>
                </value>
                <value>
                    <fullName>Progress</fullName>
                </value>
                <value>
                    <fullName>Closure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Report_Merge_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Report Merge Approved</description>
        <label>Report Merge Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Report_Name__c</fullName>
        <displayFormat>Report-{0000}</displayFormat>
        <label>Report Name</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Report_Submission_Date__c</fullName>
        <description>Report Submission Date</description>
        <label>Report Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Report_Total_Amount_Transfer_Field__c</fullName>
        <formula>B_Professional_Billings_Total__c + B_Non_Professional_Billings_Total__c +  B_Mileage_Billings_Total__c +  B_Rush_Professional_Billings_Total__c +  B_Rush_Non_Professional_Billings_Total__c +  B_Rush_Mileage_Billings_Total__c +  Total_Expenses__c  +  Service_Tax_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Report Total Amount - Transfer Field</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Report_in_Review__c</fullName>
        <formula>IMAGE(CASE ( In_Review__c , &quot;Yes&quot;, &quot;/img/samples/color_red.gif&quot;,&quot;/s.gif&quot;),&quot;Alert On Account&quot;, 20, 600)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Report in Review</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Call_from_Claims_Professional__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Request call from Claims Professional</description>
        <inlineHelpText>Check box if a call back from the Claims Professional is requested.</inlineHelpText>
        <label>Request call from Claims Professional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_Made_By__c</fullName>
        <description>Request Made By</description>
        <inlineHelpText>Indicate requesting physician name.</inlineHelpText>
        <label>Request Made By</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retained_Charge_Count__c</fullName>
        <label>Retained Charge Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Retained_Charges__c</fullName>
        <label>Retained Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Retained_Transfer_Count__c</fullName>
        <label>Retained Transfer Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Retained_Transfers__c</fullName>
        <label>Retained Transfers</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reversed_Transfer_Count__c</fullName>
        <label>Reversed Transfer Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reversed_Transfers__c</fullName>
        <label>Reversed Transfers</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rush_Mileage_Rate__c</fullName>
        <label>Special Services Mileage Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rush_Professional_Rate__c</fullName>
        <label>Special Services Professional Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rush_Travel_Wait_Rate__c</fullName>
        <label>Special Services Travel/Wait Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Service_Date_From_Case__c</fullName>
        <description>This field pulls the &quot;Date of Last Report&quot; from the case object for processing in workflow.</description>
        <formula>Related_Case__r.Date_of_Last_Report__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Date From Case</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Date_From__c</fullName>
        <description>Service Date From</description>
        <label>Service Date From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Date_Thru__c</fullName>
        <description>Service Date Thru</description>
        <label>Service Date Thru</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Tax_Rate__c</fullName>
        <formula>Related_Case__r.Service_Tax_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Tax Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Service_Tax_Total__c</fullName>
        <formula>Service_Tax_Rate__c * ( B_Professional_Billings_Total__c +  B_Rush_Professional_Hours_Total__c +  BNonProfessionalTotal_Billing__c +   B_Rush_Professional_Billings_Total__c   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Tax Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status_of_EE_Job_Analysis_JA__c</fullName>
        <description>Status of EE Job Analysis (JA)</description>
        <inlineHelpText>Select from pick list</inlineHelpText>
        <label>Status of EE Job Analysis (JA)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Job Analysis not available, recommended authorization for ISYS Vocational Specialist to complete</fullName>
                </value>
                <value>
                    <fullName>Job Analysis  authorized, pending completion</fullName>
                </value>
                <value>
                    <fullName>Job Analysis recommended by CM, not requested by physician</fullName>
                </value>
                <value>
                    <fullName>Job Analysis recommended by CM, not authorized</fullName>
                </value>
                <value>
                    <fullName>Job Analysis  available and received</fullName>
                </value>
                <value>
                    <fullName>Job Analysis  requested pending response</fullName>
                </value>
                <value>
                    <fullName>Job Analysis requested pending receipt</fullName>
                </value>
                <value>
                    <fullName>Job Analysis provided to physician</fullName>
                </value>
                <value>
                    <fullName>Job Analysis not applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_of_EE_Job_Descriptions_JD__c</fullName>
        <label>Status of EE Job Descriptions (JD)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>JD available and received</fullName>
                </value>
                <value>
                    <fullName>JD requested pending response</fullName>
                </value>
                <value>
                    <fullName>JD requested pending receipt</fullName>
                </value>
                <value>
                    <fullName>JD provided to physician&apos;</fullName>
                    <label>JD provided to physician</label>
                </value>
                <value>
                    <fullName>JD not available</fullName>
                </value>
                <value>
                    <fullName>JD not applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TTD_Explanation__c</fullName>
        <description>TTD Explanation</description>
        <inlineHelpText>If you select &quot;Yes.&quot;  If you select No, indicate “None”.</inlineHelpText>
        <label>TTD Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TTD__c</fullName>
        <description>TTD</description>
        <inlineHelpText>Select Yes, No or Not Applicable.</inlineHelpText>
        <label>TTD</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Template_ID__c</fullName>
        <formula>CASE( Type , &quot;01-Standard Initial Report&quot;, &quot;a0B80000003zqm8&quot;, 
&quot;02-Standard Progress Report&quot;, &quot;a0B80000003zrMp&quot;, 
&quot;03-Standard Abbreviated Progress Report&quot;, &quot;a0B80000003zhiC&quot;,
&quot;04-Standard Closure Report&quot;, &quot;a0B80000003zrJI&quot;,
&quot;05-Stanadrd Abbreviated Closure Report&quot;, &quot;a0B80000003zhex&quot;,
&quot;06-Standard Uniform Report&quot;, &quot;a0B80000004Mvso&quot;,
&quot;07-Sentry Initial&quot;, &quot;a0B80000003zrSe&quot;,
&quot;08-Sentry Progress&quot;, &quot;a0B80000003zrSj&quot;,
&quot;09-Sentry Closure&quot;, &quot;a0B80000003zrSk&quot;,
&quot;10-Ancillary Service&quot;, &quot;a0B80000004N45z&quot;,
&quot;11-Titan Task Assignment Report&quot;, &quot;a0B8000000TxRuO&quot;,
&quot;11-Life Care Plan&quot;,
&quot;12-LMS Report&quot;,
&quot;13-Broadspire Initial&quot;,
&quot;14-Broadspire FCM Status&quot;,
&quot;15-Broadspire Closure&quot;,
&quot;16-Broadspire Task / Lmitied Assignment&quot;,
&quot;a0B80000003zqm8&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Template ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Template_Id_Invoice__c</fullName>
        <formula>CASE( Type ,
&quot;07-Sentry Initial&quot;, &quot;a0B80000003zrds&quot;,
&quot;08-Sentry Progress&quot;, &quot;a0B80000003zrds&quot;,
&quot;09-Sentry Closure&quot;, &quot;a0B80000003zrds&quot;,
&quot;a0B80000003zrdd&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Template Id Invoice</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier_1_Recommendation__c</fullName>
        <label>Tier 1 Recommendation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Tier_1_Review_Date__c</fullName>
        <label>Tier 1 Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tier_2_Recommendation__c</fullName>
        <label>Tier 2 Recommendation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Tier_2_Review_Date__c</fullName>
        <label>Tier 2 Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Case_Note_Entries__c</fullName>
        <label>Total Case Note Entries</label>
        <summaryForeignKey>Case_Note_Entry__c.Report__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Expenses__c</fullName>
        <inlineHelpText>SUM of all supporting Case Note Entry Expenses</inlineHelpText>
        <label>Total Expenses</label>
        <summarizedField>Case_Note_Entry__c.Final_Expenses__c</summarizedField>
        <summaryForeignKey>Case_Note_Entry__c.Report__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Travel_Wait_Rate__c</fullName>
        <label>Travel/Wait Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Treatment_Comments__c</fullName>
        <label>Treatment Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Treatment_Consistent_with_EBG__c</fullName>
        <inlineHelpText>If no is selected must complete other factors influencing recovery field.</inlineHelpText>
        <label>Treatment Consistent with EBG?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Triage_File_Review_form_sent_on__c</fullName>
        <inlineHelpText>QC confirm Triage file review form was sent within 48hrs of referral. Document the date it was sent in this field.  If it wasn&apos;t email Herb and Lyndsi with date of referral and when the form was sent.</inlineHelpText>
        <label>Triage File Review form sent on</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Triage_NCM_Comment__c</fullName>
        <label>Triage NCM Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Triage_Stage_2_f_u_scheduled__c</fullName>
        <inlineHelpText>QC send a reminder email to the Triage CM if Stage 2 abbrev closure report has not been submitted by this scheduled date.</inlineHelpText>
        <label>Triage Stage 2 f/u scheduled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Transaction History - Invoice = Payment</description>
        <label>Type</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_s_of_Requests__c</fullName>
        <description>Type(s) of Requests</description>
        <label>Type(s) of Requests</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>U_C_Explanation__c</fullName>
        <description>U&amp;C Explanation</description>
        <inlineHelpText>If you select: 
&quot;With Modifications,&quot; list work restrictions
&quot;Without Modifications,&quot; write “Working full duty&quot; 
&quot;No&quot;  indicate &quot;None&quot;  
&quot;Not Applicable&quot;  indicate reason such as; retired or permanently disabled</inlineHelpText>
        <label>Work Restrictions</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WISAFI__Billing_Address_Block__c</fullName>
        <label>Billing Address Block</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>WISAFI__Class__c</fullName>
        <label>Class</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WISAFI__Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WISAFI__External_Transaction_ID__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>A Approval</inlineHelpText>
        <label>External Transaction ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>WISAFI__External_Transaction_Number__c</fullName>
        <inlineHelpText>B Approval</inlineHelpText>
        <label>External Transaction Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WISAFI__Last_Sync_Date__c</fullName>
        <label>Last Sync Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WISAFI__PO_Number__c</fullName>
        <label>PO Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WISAFI__Sales_Rep__c</fullName>
        <label>Sales Rep</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WISAFI__Ship_Date__c</fullName>
        <label>Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WISAFI__Shipping_Address_Block__c</fullName>
        <label>Shipping Address Block</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>WISAFI__Shipping_Method__c</fullName>
        <label>Shipping Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DHL</fullName>
                </value>
                <value>
                    <fullName>Federal Express</fullName>
                </value>
                <value>
                    <fullName>UPS</fullName>
                </value>
                <value>
                    <fullName>US Mail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WISAFI__Sync_Me__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync Me</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WISAFI__Terms__c</fullName>
        <label>Terms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Due on receipt</fullName>
                </value>
                <value>
                    <fullName>Net 15</fullName>
                </value>
                <value>
                    <fullName>Net 30</fullName>
                </value>
                <value>
                    <fullName>Net 60</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WISAFI__Transaction_Date__c</fullName>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
</CustomObject>